--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,32 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# dependencies
+/node_modules
+
+# production
+/dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.*.local
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Vite cache
+/.vite
+
+# local IDE settings
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Optional: OS-specific
+Thumbs.db
+Desktop.ini
+
+# Optional: macOS AirDrop folder metadata
+._*
