--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/easybook
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
