--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "framer-motion": "^12.9.6",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
